fix: fixed info icons alignment

--- a/src/app/modules/dashboard/pages/accomplishments/accomplishments.component.scss
+++ b/src/app/modules/dashboard/pages/accomplishments/accomplishments.component.scss
@@ -161,4 +161,5 @@
 
 .info-tooltip {
   font-size: 14px;
+  cursor: pointer;
 }
