--- a/src/app/modules/gradebook/pages/gradebook/gradebook.component.scss
+++ b/src/app/modules/gradebook/pages/gradebook/gradebook.component.scss
@@ -39,6 +39,10 @@
 
 .info-tooltip {
   font-size: 14px;
+  position: absolute;
+  top: 1px;
+  right: -7px;
+  cursor: pointer;
 }
 
 :host ::ng-deep {
